--- a/foundry.toml
+++ b/foundry.toml
@@ -1,6 +1,12 @@
 [profile.default]
-src = "src"
-out = "out"
-libs = ["lib"]
+  libs = ["lib"]
+  out = "out"
+  src = "src"
 
-# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+  evm_version = "cancun"
+  ffi = true
+  optimizer_runs = 800
+  solc_version = '0.8.25'
+  via_ir = false
+
+  # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
